import --cluster to create rank.db
Match-id-faa71ebb71bc5db50176aa60f3a455c3e08d6bcc

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -828,3 +828,8 @@ dev_wall=INTEGER,null
 dev_cntvct=INTEGER,null
 host_mon=INTEGER,null
 host_wall=INTEGER,null
+
+[ClusterRankMap]
+rank_id=INTEGER,null
+device_id=INTEGER,null
+dir_name=STRING,null
