cluster_info parser
Match-id-0c0f6f27709a801d52b9eb3068deccdf47b4c72f

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -830,6 +830,8 @@ host_mon=INTEGER,null
 host_wall=INTEGER,null
 
 [ClusterRankMap]
-rank_id=INTEGER,null
+job_info=TEXT,null
 device_id=INTEGER,null
-dir_name=STRING,null
+collection_time=TEXT,null
+rank_id=INTEGER,null
+dir_name=TEXT,null
