--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -835,3 +835,16 @@ device_id=INTEGER,null
 collection_time=TEXT,null
 rank_id=INTEGER,null
 dir_name=TEXT,null
+
+[ClusterStepTraceMap]
+device_id=INTEGER,null
+model_id=INTEGER,null
+iteration_id=INTEGER,null
+FP_start=INTEGER,null
+BP_end=INTEGER,null
+iteration_end=INTEGER,null
+iteration_time=INTEGER,null
+fp_bp_time=INTEGER,null
+grad_refresh_bound=INTEGER,null
+data_aug_bound=INTEGER,null
+ge_tag=INTEGER,null
