AR:AR20220705252379 Description:集群汇集迭代轨迹，clean code Team:MSPROF_TOOLS Feature or Bugfix:Feature
Match-id-51624373704e6c6de424c6b7ec46b5214fa07a57

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -840,11 +840,11 @@ dir_name=TEXT,null
 device_id=INTEGER,null
 model_id=INTEGER,null
 iteration_id=INTEGER,null
-FP_start=INTEGER,null
-BP_end=INTEGER,null
-iteration_end=INTEGER,null
-iteration_time=INTEGER,null
-fp_bp_time=INTEGER,null
-grad_refresh_bound=INTEGER,null
-data_aug_bound=INTEGER,null
+FP_start=REAL,null
+BP_end=REAL,null
+iteration_end=REAL,null
+iteration_time=REAL,null
+fp_bp_time=REAL,null
+grad_refresh_bound=REAL,null
+data_aug_bound=REAL,null
 ge_tag=INTEGER,null
