--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -483,6 +483,13 @@ dispatch_time=REAL, null
 total_time=REAL, null
 batch_id=INTEGER,null
 
+[AiCpuFromTsMap]
+stream_id=INTEGER,null
+task_id=INTEGER,null
+sys_start=INTEGER, null
+sys_end=INTEGER, null
+batch_id=INTEGER,null
+
 [CpuInfoMap]
 cpu_num=INTEGER, null
 clk_jiffies=INTEGER, null
@@ -788,7 +795,7 @@ tid=INTEGER, null
 interval_start=INTEGER, null
 
 [TaskTypeMap]
-timestamp=TEXT, null
+timestamp=REAL, null
 stream_id=INTEGER, null
 task_id=INTEGER, null
 task_type=TEXT, null
