--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -854,5 +854,5 @@ device_id=INTEGER,null
 model_id=INTEGER,null
 index_id=INTEGER,null
 iteration_end=INTEGER,null
-start=INTEGER,null
-end=INTEGER,null
+all_reduce_start=INTEGER,null
+all_reduce_end=INTEGER,null
