--- a/analysis/config/ai_cpu_from_ts_source.ini
+++ b/analysis/config/ai_cpu_from_ts_source.ini
@@ -1,1 +1,11 @@
-[TsTrack]
+[TsTrackModel]
+path=msmodel.step_trace.ts_track_model
+table_name=TaskType
+start_tag=1
+end_tag=2
+
+[RuntimeModel]
+path=msmodel.runtime.runtime_model
+table_name=TimeLine
+start_tag=3
+end_tag=4
