--- a/analysis/config/data_calculator.ini
+++ b/analysis/config/data_calculator.ini
@@ -41,3 +41,7 @@ chip_model = 5
 [AccPmuCalculator]
 path = mscalculate.stars.acc_pmu_calculate
 chip_model = 5
+
+[AICpuFromTsCalculator]
+path = mscalculate.ts_task.ai_cpu.aicpu_from_ts
+chip_model = 1
