[ADD]aclapi interface
Match-id-b0feb1a33858ff9725aaf9f8ef9314474c95ce40

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -81,6 +81,8 @@ install(TARGETS stub_msprofiler OPTIONAL
 
 ######################## libmsprofiler.so ###########################
 set(msprofilerCpp
+    ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter_impl.cpp
+    ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter.cpp
     analyze/src/analyzer.cpp
     analyze/src/analyzer_base.cpp
     analyze/src/analyzer_ge.cpp
@@ -157,6 +159,7 @@ set(msprofilerInc
     ${TOP_DIR}/platform/securec/include
     ${TOP_DIR}/opensource/json/include
     ${TOP_DIR}/collector/dvvp/depend/inc/plugin
+    ${TOP_DIR}/collector/dvvp/params_adapter
     msprof/engine/include
     msprof/common/include
     msprof/drvprof/include
