host quene analyse
Match-id-bbf22ccf2e62af17edf11d9c98f606a490bc098b

--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -165,3 +165,6 @@ chip_model = 5
 path = msparser.ms_timer.ms_time_parser
 chip_model = 0,1,2,3,4,5
 
+[DataPreprocessParser]
+path = msparser.aicpu.host_queue_parser
+chip_model = 0,1,2,3,4,5
