data queue analyse
Match-id-bf829f4b1003a77a84fa63d174398708cfcf4b65

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -849,7 +849,7 @@ grad_refresh_bound=REAL,null
 data_aug_bound=REAL,null
 ge_tag=INTEGER,null
 
-[HostQueueMap]
+[DataQueueMap]
 node_name=TEXT,null
 queue_size=INTEGER,null
 start_time=REAL,null
