--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -795,7 +795,7 @@ tid=INTEGER, null
 interval_start=INTEGER, null
 
 [TaskTypeMap]
-timestamp=REAL, null
+timestamp=TEXT, null
 stream_id=INTEGER, null
 task_id=INTEGER, null
 task_type=TEXT, null
