--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -539,6 +539,7 @@ runtime_trans_start=REAL,null
 runtime_trans_end=REAL,null
 
 [HwtsTaskMap]
+task_type=INTEGER,null
 stream_id=INTEGER,null
 task_id=INTEGER,null
 sys_counter=INTEGER,null
