--- a/test/msprof_cpp/ut/host/CMakeLists.txt
+++ b/test/msprof_cpp/ut/host/CMakeLists.txt
@@ -89,6 +89,7 @@ target_include_directories(host_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/adx/inc    
     ${MSPROF_SOURCE_DIR}/dvvp/aging 
     ${MSPROF_SOURCE_DIR}/dvvp/common 
+    ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/include
     ${MSPROF_SOURCE_DIR}/dvvp/common/config 
     # ${MSPROF_SOURCE_DIR}/dvvp/common/logger
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/ 
