--- a/test/msprof_cpp/ut/driver/CMakeLists.txt
+++ b/test/msprof_cpp/ut/driver/CMakeLists.txt
@@ -39,6 +39,7 @@ target_include_directories(driver_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/common/mmpa
     ${MSPROF_SOURCE_DIR}/dvvp/driver/inc 
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
+    ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/include
     ${MSPROF_SOURCE_DIR}/dvvp/common/config
     ${MSPROF_SOURCE_DIR}/dvvp/depend/include/stub
 )
