--- a/test/msprof_cpp/ut/app/CMakeLists.txt
+++ b/test/msprof_cpp/ut/app/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(
 target_include_directories(application_utest PRIVATE
     ${GTEST_INCLUDE_DIR}
     ${MOCKCPP_INCLUDE_DIR}
+    ${TOP_DIR}/collector/inc/toolchain
     ${TOP_DIR}/collector/inc/external
     ${TOP_DIR}/platform/securec/include
     ${TOP_DIR}/opensource/json/include
@@ -58,6 +59,7 @@ target_include_directories(application_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/common/validation
     ${MSPROF_SOURCE_DIR}/dvvp/common/statistics
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/include
+    ${TOP_DIR}/collector/inc/toolchain
     ${MSPROF_SOURCE_DIR}/dvvp/common/config
     ${MSPROF_SOURCE_DIR}/dvvp/host/include
     ${MSPROF_SOURCE_DIR}/dvvp/streamio/server/include
