--- a/test/msprof_cpp/ut/message/CMakeLists.txt
+++ b/test/msprof_cpp/ut/message/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(message_utest
 target_include_directories(message_utest PRIVATE
     ${GTEST_INCLUDE_DIR}
     ${MOCKCPP_INCLUDE_DIR}
+    ${TOP_DIR}/collector/inc/toolchain
     ${TOP_DIR}/platform/securec/include
     ${TOP_DIR}/opensource/json/include
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
