--- a/test/msprof_cpp/ut/common/CMakeLists.txt
+++ b/test/msprof_cpp/ut/common/CMakeLists.txt
@@ -8,6 +8,10 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}//dvvp/common/memory/chunk_pool.cpp
     ${MSPROF_SOURCE_DIR}//dvvp/common/thread/thread.cpp
     ${MSPROF_SOURCE_DIR}//dvvp/common/config/config_manager.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/common/logger/cmd_log.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/slog_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/driver/devmgmt/ai_drv_dev_api.cpp        
+    ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform.cpp    
     ${MSPROF_SOURCE_DIR}//dvvp/common/thread/thread_pool.cpp
     ${MSPROF_SOURCE_DIR}//dvvp/common/statistics/perf_count.cpp
     ${MSPROF_SOURCE_DIR}//dvvp/common/utils/utils.cpp
@@ -50,6 +54,7 @@ target_include_directories(common_utest PRIVATE
     ${MOCKCPP_INCLUDE_DIR}
     ${TOP_DIR}/collector/inc/toolchain
     ${TOP_DIR}/collector/inc/external
+    ${TOP_DIR}/collector/dvvp/depend/inc/acl
     ${TOP_DIR}/platform/securec/include
     ${TOP_DIR}/opensource/json/include
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
@@ -65,8 +70,10 @@ target_include_directories(common_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/common/statistics
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/include
+    ${MSPROF_SOURCE_DIR}/dvvp/common/utils 
     ${MSPROF_SOURCE_DIR}/dvvp/common/config
     ${MSPROF_SOURCE_DIR}/dvvp/driver/inc
+    ${MSPROF_SOURCE_DIR}/dvvp/common/logger
     ${MSPROF_SOURCE_DIR}/dvvp/common/errno
     ${MSPROF_SOURCE_DIR}/dvvp/common/mmpa
     ${MSPROF_SOURCE_DIR}/dvvp/common/validation
