--- a/test/msprof_cpp/ut/stub_utest/CMakeLists.txt
+++ b/test/msprof_cpp/ut/stub_utest/CMakeLists.txt
@@ -32,6 +32,7 @@ target_include_directories(stub_file_utest PRIVATE
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
     ${MSPROF_SOURCE_DIR}/dvvp/common/
     ${MSPROF_SOURCE_DIR}/dvvp/common/config
+    ${MSPROF_SOURCE_DIR}/dvvp/common/utils 
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/include
     ${MSPROF_SOURCE_DIR}/dvvp/adx/inc
     ${MSPROF_SOURCE_DIR}/dvvp/depend/include/wrapper
