--- a/test/msprof_cpp/ut/app/CMakeLists.txt
+++ b/test/msprof_cpp/ut/app/CMakeLists.txt
@@ -19,6 +19,7 @@ set(profilerSrcList
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_handle.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/src/slog_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
     ${CppPath}
 )
 
