--- a/test/msprof_cpp/ut/CMakeLists.txt
+++ b/test/msprof_cpp/ut/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_subdirectory(transport)
-add_subdirectory(msprof)
-add_subdirectory(app)
-add_subdirectory(common)
-add_subdirectory(driver)
-add_subdirectory(job_wrapper)
-add_subdirectory(message)
-add_subdirectory(streamio)
+# add_subdirectory(transport)
+# add_subdirectory(msprof)
+# add_subdirectory(app)
+# add_subdirectory(common)
+# add_subdirectory(driver)
+# add_subdirectory(job_wrapper)
+# add_subdirectory(message)
+# add_subdirectory(streamio)
 add_subdirectory(msprofbin)
-add_subdirectory(stub_utest)
+# add_subdirectory(stub_utest)
