冗余代码&文件删除
Match-id-2b383c16a6d4003e73297b0f70db9de03eddb7d1

--- a/test/msprof_cpp/ut/CMakeLists.txt
+++ b/test/msprof_cpp/ut/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(message)
 add_subdirectory(streamio)
 add_subdirectory(msprofbin)
 add_subdirectory(stub_utest)
+add_subdirectory(plugin)
