--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -121,6 +121,7 @@ chip_model = 2,3,4
 [HCCLParser]
 path = msparser.hccl.hccl_parser
 chip_model = 0,1,2,3,4
+level = 3
 
 [MsprofTxParser]
 path = msparser.msproftx.msproftx_parser
