--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -555,9 +555,11 @@ model_id=INTEGER,null
 batch_id=INTEGER,null
 
 [HwtsIterMap]
-ai_core_num=INTEGER,null
-task_count=INTEGER,null
 iter_id=INTEGER,null
+task_count=INTEGER,null
+task_offset=INTEGER,null
+ai_core_num=INTEGER,null
+ai_core_offset=INTEGER,null
 sys_cnt=INTEGER,null
 
 [HwtsBatchMap]
