--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -561,6 +561,8 @@ task_offset=INTEGER,null
 ai_core_num=INTEGER,null
 ai_core_offset=INTEGER,null
 sys_cnt=INTEGER,null
+sum_task=INTEGER,null
+sum_aic=INTEGER,null
 
 [HwtsBatchMap]
 stream_id=INTEGER,null
