--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -556,6 +556,8 @@ batch_id=INTEGER,null
 
 [HwtsIterMap]
 iter_id=INTEGER,null
+model_id=INTEGER,null
+index_id=INTEGER,null
 task_count=INTEGER,null
 task_offset=INTEGER,null
 ai_core_num=INTEGER,null
