--- a/test/msprof_cpp/ut/CMakeLists.txt
+++ b/test/msprof_cpp/ut/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(streamio)
 add_subdirectory(msprofbin)
 add_subdirectory(stub_utest)
 add_subdirectory(plugin)
+add_subdirectory(params_adapter)
